Modernize aaa-cli-jar
Use more modern path resolution, as pointed out by modernizer.

Change-Id: I43373319da84216e03c213a41fbfb3ef56761f34
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
(cherry picked from commit dc14cc0586328ab9a7615ddf2ca4f404d3a4c861)