@@ -10,10 +10,9 @@ package org.opendaylight.aaa.cli.jar;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 
-import java.io.File;
 import java.io.IOException;
+import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import org.junit.Test;
 
@@ -27,8 +26,7 @@ import org.junit.Test;
  * @author Michael Vorburger
  */
 public class MainIT {
-
-    private static final String DIR = "target/" + MainIT.class.getSimpleName();
+    private static final Path DIR = Path.of("target", MainIT.class.getSimpleName());
 
     @Test
     public void integrationTestBuildJAR() throws Exception {
@@ -43,13 +41,13 @@ public class MainIT {
     }
 
     private static void runFatJAR(final String... arguments) throws IOException, InterruptedException {
-        List<String> fullArguments = new ArrayList<>(Arrays.asList(
-            findJava().getAbsolutePath(),
+        final var fullArguments = new ArrayList<>(List.of(
+            Path.of(System.getProperty("java.home")).resolve("bin").resolve("java").toAbsolutePath().toString(),
             "-jar",
-            findExecutableFatJAR().getAbsolutePath(),
+            findExecutableFatJAR().toAbsolutePath().toString(),
             "--dbd",
-            DIR));
-        fullArguments.addAll(Arrays.asList(arguments));
+            DIR.toString()));
+        fullArguments.addAll(List.of(arguments));
 
         // If Output piping to LOG instead of inheritIO() etc. is needed, then
         // consider using https://github.com/vorburger/MariaDB4j/tree/master/mariaDB4j-core/src/main/java/ch/vorburger/exec
@@ -61,18 +59,14 @@ public class MainIT {
         assertEquals(0, process.exitValue());
     }
 
-    private static File findExecutableFatJAR() {
-        File targetDirectory = new File(".", "target");
-        File[] jarFiles = targetDirectory.listFiles((dir, name) -> name.startsWith("aaa-cli-jar-")
+    private static Path findExecutableFatJAR() {
+        final var targetDirectory = Path.of(".", "target").toFile();
+        final var jarFiles = targetDirectory.listFiles((dir, name) -> name.startsWith("aaa-cli-jar-")
             && name.endsWith(".jar")
             && !name.contains("-javadoc")
             && !name.contains("-sources"));
         assertNotNull("*jar-with-dependencies.jar files in " + targetDirectory, jarFiles);
         assertEquals("*jar-with-dependencies.jar files in " + targetDirectory, 1, jarFiles.length);
-        return jarFiles[0];
-    }
-
-    private static File findJava() {
-        return new File(new File(new File(System.getProperty("java.home")), "bin"), "java");
+        return jarFiles[0].toPath();
     }
 }
